# salary-info-api

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
core/: database.py  main.py  models.py  settings.py
core/alembic/: env.py
core/alembic/versions/: 4bb92b9600ff_initial_migration_for_all_models.py
core/routes/: login.py  salary.py  users.py
core/schemas/: __init__.py  salary_create_request.py  salary_response.py  token_response.py  user_auth_request.py  user_create_request.py  user_response.py
core/scripts/: __init__.py  init_admin_user.py
core/services/: __init__.py  auth_service.py  salary_service.py  user_service.py
core/utils/: __init__.py  get_db_session.py  get_password_hash.py
tests/: conftest.py
tests/fixtures/: admin_user.py  client.py  employee_salary.py  employee_user.py  init_admin.py  login_as_admin.py  testing_db.py
tests/integration_tests/: test_create_salary.py  test_get_my_salary.py  test_get_salaries.py  test_get_user_by_id.py  test_get_users.py  test_login.py  test_register_user.py
